# hestia

./: .gitignore  .mcp.json  CHEATSHEET.md  CLAUDE.md  CLAUDE_CODE_PROMPT.md  Hestia-Enhancement-Plan-v1.docx  Hestia-Principal-Engineering-Review.docx  PLUGIN-INSTALL-GUIDE.md  README.md  SESSION_HANDOFF.md  SPRINT.md  appcast.xml  liquid-glass-design-system-mockup.html  pytest.ini  requirements.in  requirements.txt
.claude/: launch.json  settings.json
.serena/: project.yml
HestiaApp/: ExportOptions-iOS.plist  ExportOptions.plist  README.md  project.yml
HestiaShared/: Package.swift
certs/: .gitignore
config/: known-pth-files.txt  orchestration.yaml  sentinel-dns-allowlist.json  sentinel-process-allowlist.json  sentinel.json  triggers.yaml
docs/: api-contract.md  deployment.md  hestia-decision-log.md  hestia-development-plan.md  hestia-initiative-enhanced.md  hestia-project-context-enhanced.md  hestia-security-architecture.md  hestia-workspace-plan.md  ui-data-models.md  ui-requirements.md
hestia-cli/: pyproject.toml
hestia-cli/data/user/: .user-meta.yaml  BODY.md  MEMORY.md  MIND.md  SETUP.md  TOOLS.md  USER-IDENTITY.md  VITALS.md
hestia-cli/data/user/commands/: closing-time.md  hunt.md  reboot.md  research.md  teach.md
hestia-cli/hestia_cli/: __init__.py  __main__.py  app.py  auth.py  bootstrap.py  client.py  commands.py  config.py  context.py  models.py  renderer.py  repl.py  status.py
hestia-cli/tests/: conftest.py  test_auth.py  test_bootstrap.py  test_client.py  test_config.py  test_context.py  test_renderer.py  test_repl.py
tasks/: lessons.md  (+1 more)
(+1273 files in other folders)
